--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-
+		<h1>hello world</h1>
 		<link rel="stylesheet" href="css/main.min.css">
 		<script src="js/scripts.min.js"></script>
 </body>
