--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,20 @@
       </div>
 			</div>
 		</div>
+    <div class="wrap">
+      <div class="container">
+      <div class="row">
+        <div class="col-md-1">
+          <div class="header">
+            <div class="menu_tog">
+              <a class="toggle" href="#"><span></span></a>
+            </div>
+            <div class="search"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
 		<link rel="stylesheet" href="css/main.min.css">
 		<script src="js/scripts.min.js"></script>
 </body>
