five commit diag

--- a/app/index.html
+++ b/app/index.html
@@ -73,39 +73,30 @@
       </div>
 			<div class="section_info">
 					<div class="row">
-
 						<div class="col-md-3">
 							<div class="total_sales">
 								<div class="total_icon"><img src="../img/icon_total_sales.png" alt=""></div>
 								<div class="title_sales">Total Sales<span><sup>$</sup>215,645</span></div>
 							</div>
 						</div>
-
 						<div class="col-md-3">
 							<div class="quote">
-								<div class="quote_icon"><img src="../img/icon_quote.png" alt=""></div>
-								<div class="quote_descr">
-									<div class="title_quote"></div>
-								</div>
+								<div class="quote_icon v_fix"><img src="../img/icon_quote.png" alt=""></div>
+								<div class="title_quote">New Quote<span>523,543</span></div>
 							</div>
 						</div>
-
 						<div class="col-md-3">
 							<div class="orders">
-								<div class="orders_icon"><img src="../img/icon_orders.png" alt=""></div>
-								<div class="title_orders"></div>
+								<div class="orders_icon v_fix"><img src="../img/icon_orders.png" alt=""></div>
+								<div class="title_orders">Orders<span>23,414</span></div>
 							</div>
 						</div>
-
 						<div class="col-md-3">
 							<div class="products">
-								<div class="products_icon"><img src="../img/icon_products.png" alt=""></div>
-								<div class="products_descr">
-									<div class="title_products"></div>
-								</div>
+								<div class="products_icon v_fix"><img src="../img/icon_products.png" alt=""></div>
+									<div class="title_products">Products<span>19,087</span></div>
 							</div>
 						</div>
-
 					</div>
 					<div class="row">
 						<div class="col-md-9">
@@ -130,13 +121,57 @@
 						</div>
 						<div class="col-md-6">
 							<div class="profile">
-		            <p>Ononto Jolil</p>
-		            <p class="profile_loc">Joker in Dhallywood</p>
-								<img src="../img/icon-profile.png" alt="">
+								<div class="prof_head">
+									<p>Ononto Jolil</p>
+									<p class="profile_loc">Joker in Dhallywood</p>
+									<div class="prof_avatar">
+										<img  class="ava" src="../img/icon-profile.png" alt="">
+									</div>
+								</div>
+								<div class="prof_content">
+									“Lorem ipsum dolor sit amet, consectetur adipising elieat, sed do eiusmod tempor incididunt utmabor edolore exercitation ullamco laboris nisi ut aliquip” ex ea
+								</div>
+								<div class="prof_bot">
+									<div class="prof_bot_item">
+										<p class="quantity">179</p>
+										<p class="descr">Customers</p>
+									</div>
+									<div class="prof_bot_item">
+										<p class="quantity">19K</p>
+										<p class="descr">Products</p>
+									</div>
+									<div class="prof_bot_item">
+										<p class="quantity">15K</p>
+										<p class="descr">Followers</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 	    </div>
+			<div class="section_progressbar">
+				<div class="container">
+				<div class="row">
+					<div class="col-md-3">
+	          <h3>Customer Ratings</h3>
+          </div>
+					<div class="col-md-4">
+            <div class="progress">
+              <div data-percentage="0%" style="width: 50%;" class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div data-percentage="0%" style="width: 60%;" class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div data-percentage="0%" style="width: 20%;" class="progress-bar progress-bar-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+				</div>
+			</div>
+			</div>
 	  </div>
 	</div>
 		<link rel="stylesheet" href="css/main.min.css">
