--- a/app/index.html
+++ b/app/index.html
@@ -114,12 +114,12 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
-							<div class="traffic">
-								<canvas id="traffic" width="455" height="400"></canvas>
+							<div class="col-md-6">
+								<div class="traffic">
+									<canvas id="traffic" width="455" height="400"></canvas>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-6">
+							<div class="col-md-6">
 							<div class="profile">
 								<div class="prof_head">
 									<p>Ononto Jolil</p>
@@ -150,27 +150,44 @@
 					</div>
 	    </div>
 			<div class="section_progressbar">
-				<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-	          <h3>Customer Ratings</h3>
+					<div class="progress_top clearfix">
+						<div class="title left">Customer Ratings</div>
+						<div class="vote right">2,45,567 Votes</div>
+					</div>
+					<div class="col_1 left">
+						<p class="reting item1">The product is Awesome</p>
+						<p class="reting item2">Yeah I’m Satisfied with it</p>
+						<p class="reting item3">Average product, not bad</p>
+						<p class="reting item4">The product is Awesome</p>
+					</div>
+					<div class="col_2 left">
+						<div class="progress_wrap">
+	            <div class="progress">
+	              <div data-percentage="0%" style="width: 67%;" class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+	            </div>
+						</div>
+						<div class="progress_wrap">
+							<div class="progress">
+	              <div data-percentage="0%" style="width: 25%;" class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+	            </div>
+						</div>
+						<div class="progress_wrap">
+							<div class="progress">
+	              <div data-percentage="0%" style="width: 7%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+	            </div>
+						</div>
+						<div class="progress_wrap">
+							<div class="progress">
+              <div data-percentage="0%" style="width: 15%;" class="progress-bar progress-bar-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+						</div>
           </div>
-					<div class="col-md-4">
-            <div class="progress">
-              <div data-percentage="0%" style="width: 50%;" class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div data-percentage="0%" style="width: 60%;" class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div data-percentage="0%" style="width: 20%;" class="progress-bar progress-bar-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-				</div>
-			</div>
+					<div class="col_3 left">
+						<p class="percent">67%</p>
+						<p class="percent">25%</p>
+						<p class="percent">7%</p>
+						<p class="percent">15%</p>
+					</div>
 			</div>
 	  </div>
 	</div>
